--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
+    "mongoose-paginate-v2": "^1.9.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "stripe": "^11.9.1",
