--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@reduxjs/toolkit": "^2.9.2",
     "axios": "^1.12.2",
     "lucide-react": "^0.545.0",
     "rc-slider": "^11.1.9",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.9.3",
+    "react-router-dom": "^6.28.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
+    "@vitejs/plugin-react": "^4.3.3",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
