--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "google-auth-library": "^10.5.0",
     "image-thumbnail": "^1.0.17",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.8.0",
     "mongoose-paginate-v2": "^1.9.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "pdfkit": "^0.17.2",
+    "puppeteer": "^24.32.1",
     "razorpay": "^2.9.6",
     "react-beautiful-dnd": "^13.1.1",
     "react-toastify": "^11.0.5",
