--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.12.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.14.1",
     "lucide-react": "^0.545.0",
     "rc-slider": "^11.1.9",
     "react": "^18.2.0",
