--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "gsap": "^3.14.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.545.0",
     "rc-slider": "^11.1.9",
     "react": "^18.2.0",
