--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,1 +1,17 @@
-
+PORT=5000
+NODE_ENV=production
+DB_LOCAL_URI=mongodb+srv://iTech:Itech1299%40@itech.toe9gbc.mongodb.net/iTech?retryWrites=true&w=majority
+JWT_SECRET=F66DB4EC116F3
+JWT_EXPIRES_TIME=7d
+COOKIE_EXPIRES_TIME=7
+BACKEND_URL=http://127.0.0.1:5000
+FRONTEND_URL=http://127.0.0.1:3000
+GOOGLE_CLIENT_ID=761683416195-r8a0sdsmt6ucai7dmrik4r5so903u29p.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+JWT_COOKIE_EXPIRE=7
+GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
+RAZORPAY_KEY_ID=rzp_test_Rhd3c2tvDK3obS
+RAZORPAY_KEY_SECRET=tE3kL5il56AOGkoQPZDOFARX
+RAZORPAY_WEBHOOK_SECRET=amJEVTVQOEh0bjNmVG1xZENZQXZRV0dzSXh6cmtTNDY=
+N8N_BASE_URL=https://n8n.srv1174153.hstgr.cloud
+N8N_WEBHOOK_SECRET=Itech1299@
