--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "axios": "^1.12.2",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^3.0.2",
+    "connect-mongo": "^6.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.18.2",
     "express-validator": "^7.3.1",
     "ffmpeg-static": "^5.3.0",
     "fluent-ffmpeg": "^2.1.3",
