--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,8 +36,10 @@
     "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0",
+    "react-slick": "^0.31.0",
     "react-sparklines": "^1.7.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
