--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.12.2",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.9.0",
     "connect-mongo": "^6.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
